testsuite/tests/grammar/invalid_lexers/spacing_3.lkt
import common

lexer foo_lexer {
    @unparsing_spacing(with=foo)
    family ids {
        Example <- "example"
    }
}
